[package]
name = "repomill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13.25"
serde = "1.0.131"
serde_derive = "^1.0.131"
config = "0.11.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }